# MWA

./: .env.example  .pre-commit-config.yaml  :memory:  Concept.md  ConfigurationExample.md  Dockerfile  Dockerfile.dev  Dockerfile.mcp  README.md  SECURITY_FIXES_SUMMARY.md  bandit-report.json  chrome_driver_setup_plan.md  config.example.json  config.json  create_sample_data.py  discord_notification_setup.md  docker-compose.dev.yml  docker-compose.yml  feature-mapping.json  legacy-dashboard-cleanup-plan.md  mainExecutionScript.md  mcp.example.json  migration-analysis-report.json  migration-analysis-tool.js  migration-test-suite.json  migration-validation-framework.js  monitoring-config.json  mwa-fix-plan-20251120.md  mwa-fix-workflow.md  phase3-contact-management-migration.md  phase3-migration-implementation-plan.md  phase3-migration-tracker.js  plan_prompt.md  property_management_analysis.py  property_management_analysis_20251120_013823.json  property_management_analysis_20251120_014850.json  pyproject.toml  rollback-procedures.json  run.py  svelte-market-intelligence-architecture.md  (+12 more)
.continue/rules/: CONTINUE.md
.github/workflows/: ci.yml  docs.yml
.roo/: system-prompt-mafa-qa-tester.md
.roo/commands/: next-steps-roadmap.md
.roo/modes/: mafa-qa-tester-roadmap-planner.json
.roo/rules-code/: rules.md
api/: auth.py  contact_review.py  main.py
api/data/: mwa_core.db
api/middleware/: __init__.py  rate_limiter.py  security_headers.py
api/routers/: __init__.py  config.py  contacts.py  listings.py  scheduler.py  scraper.py  system.py
api/schemas/: __init__.py  common.py  config.py  contacts.py  listings.py  market_intelligence.py  scheduler.py  scraper.py  system.py
api/websocket/: manager.py
api/ws/: __init__.py  manager.py  routes.py
config/: mwa_core.example.json  scheduler.example.json
config/production/: contact_discovery.json
dashboard/static/css/: dashboard.css  enhanced-dashboard.css  search-management.css  setup-wizard.css
dashboard/static/js/: analytics.js  dashboard-realtime.js  (+6 more)
dashboard/templates/: contacts.html  enhanced-dashboard.html  index.html
data/: mwa_core.db
deploy/: dashboard_server.py  mafa-dashboard.service  week1_setup.py  week2_setup.py  week3_setup.py  week4_setup.py
deploy/data/: contacts.db
docs/: README.md  repo-map.md
docs/architecture/: contact-discovery.md  data-models.md  database-schema.md  system-overview.md
docs/developer-guide/: code-style.md  contributing.md  development-setup.md  documentation-guidelines.md
docs/examples/: markdown-examples.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/operations/: backup-restore.md  deployment.md  monitoring.md  security.md
docs/project/: changelog.md  development-plan.md  governance.md  release-notes.md  roadmap.md
docs/templates/: api-reference-template.md  guide-template.md  release-notes-template.md
docs/user-guide/: dashboard.md  overview.md  setup-wizard.md  troubleshooting.md
examples/: contact_discovery_integration.py  ocr_integration.py  pdf_integration.py
launcher/: launcher.html  launcher.py  run-launcher.sh
mafa/: __init__.py  driver.py  exceptions.py  monitoring.py  security.py  security_utils.py
mafa/config/: __init__.py  settings.py
mafa/contacts/: __init__.py  extractor.py  integration.py  models.py  ocr_extractor.py  pdf_extractor.py  storage.py  validator.py
mafa/crawler/: __init__.py  immoscout.py  js_renderer.py  wg_gesucht.py
mafa/dashboard/: __init__.py
mafa/db/: __init__.py  manager.py
mafa/notifier/: __init__.py  discord.py  telegram.py
mafa/orchestrator/: __init__.py
mafa/providers/: __init__.py  base.py  immoscout.py  wg_gesucht.py
mafa/scheduler/: __init__.py  scheduler.py
mafa/templates/: __init__.py  apply_short.jinja2
mwa-munchewohnungsassistent/: __init__.py
mwa_core/: __init__.py  cli.py
mwa_core/config/: __init__.py  settings.py
mwa_core/contact/: __init__.py  crawler.py  discovery.py  extractors.py  integration.py  market_intelligence.py  market_intelligence_scoring.py  market_intelligence_validators.py  models.py  scoring.py  validators.py
mwa_core/notifier/: __init__.py  base.py  discord.py  email.py  factory.py  manager.py  slack.py  webhook.py
mwa_core/orchestrator/: orchestrator.py
mwa_core/providers/: __init__.py  immoscout.py  wg_gesucht.py
mwa_core/scheduler/: __init__.py  config.py  job_definitions.py  job_manager.py  persistent_scheduler.py
mwa_core/scraper/: __init__.py  base.py  engine.py  registry.py
mwa_core/storage/: __init__.py  backup.py  deduplication.py  manager.py  models.py  notification_history.py  operations.py  relationships.py  schema.py
scripts/: analyze-code.sh  check-links.sh  component_rollback.sh  docker-dev.sh  docs-stats.sh  feature_rollback.sh  generate-roadmap.sh  health-check.sh  lint-docs.sh  run-dev.sh  run-scraper-dryrun.sh  run-tests.sh  scheduler-service.py  system_rollback.sh  update-docs-index.sh  validate-docs.sh  validate-metadata.sh  validate-structure.sh
src/: crawler.py  main.py
svelte-market-intelligence/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
svelte-market-intelligence/.svelte-kit/: ambient.d.ts
svelte-market-intelligence/src/: app.css  app.html
tests/: test_api_endpoints.py  test_api_integration.py  test_configuration.py  test_contacts.py  test_db_manager.py  test_dry_run.py  test_exceptions.py  test_mwa_core_config.py  test_mwa_core_contact_discovery.py  test_mwa_core_contact_extractors.py  test_mwa_core_notifier_discord.py  test_mwa_core_notifier_email.py  test_mwa_core_notifier_system.py  test_mwa_core_scheduler.py  test_mwa_core_storage.py  test_mwa_core_storage_deduplication.py  test_mwa_core_storage_migrations.py  test_mwa_core_storage_operations.py  test_orchestrator.py  test_provider_registry.py  test_providers.py  test_security.py
tests/integration/: __init__.py  test_api_integration_simple.py  test_backend_frontend_integration.py  test_end_to_end.py  test_performance.py
tools/mcp-shim/: mafa-code-analyzer.py  mafa-health-monitor.py
(+128 files in other folders)
