[project]
name = "mwa-munchewohnungsassistent"
version = "0.1.0"
packages = [{include = "mafa"}]
description = "Munich Apartment Finder Assistant (MAFA) – a Python tool for scraping listings and notifying users."
authors = [
    {name = "Vincent Göke",email = "goeke.vincent@gmail.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.20,<5",
    "webdriver-manager>=4.0.0",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "streamlit>=1.30.0",
    "bleach>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=5.9.0",
    "dnspython>=2.4.0",
    # OCR dependencies
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    # PDF dependencies
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "reportlab>=3.6.0",
    # JavaScript rendering
    "playwright>=1.40.0",
    # Dashboard
    "python-multipart>=0.0.6",
    # Development dependencies
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "xenon>=0.9.0",
    "radon>=6.0.0",
    "pre-commit>=3.0.0",
    "coverage>=7.0.0",
    "codecov>=2.1.0"
]


[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | .pytest_cache
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["mafa", "api", "tests"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache",
    "htmlcov",
    ".eggs",
    "*.egg-info"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S001"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "webdriver_manager.*",
    "loguru.*",
    "apscheduler.*",
    "beautifulsoup4.*",
    "dnspython.*",
    "pytesseract.*",
    "opencv_python.*",
    "PyMuPDF.*",
    "pdfplumber.*",
    "reportlab.*",
    "playwright.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["mafa", "api"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme
    "W0613",  # unused-argument
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 7
min-public-methods = 2
max-public-methods = 20

[tool.xenon]
max-average = "B"
max-modules = "B"
max-absolute = "B"

[tool.radon]
cc = { min = "B" }
mi = { min = "B" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
